--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
         </div>
          <div id="shortcontain">   
             
-            <a href="#seg">
+            <a href="#seghead">
                 <div class="MenuBox" id="one">
                     <h1>Economic Geology</h1>
                     <img src="{{ url_for('static',filename='images/seg.png') }}" alt="SEG">
@@ -76,7 +76,7 @@
                     </p2>
                 </div>
                 <div id="volcanopic">
-                    
+                    <img src="{{ url_for('static',filename='images/teide2.jpg') }}" alt="MT TEIDE">
                 </div>
             </div>
         </div>
@@ -211,9 +211,9 @@
                         <img src="{{ url_for('static',filename='images/i5.jpg') }}" alt="Late Heavy Bombardment">
                     </div>
                     </a>
-                    <a href="{{ url_for('static',filename='images/i6.jpg') }}" data-lightbox="i_6" data-title="Japan earthquake and tsunami">
+                    <a href="{{ url_for('static',filename='images/i6.png') }}" data-lightbox="i_6" data-title="My donut render">
                     <div  class="c_img" id="i_6">
-                        <img src="{{ url_for('static',filename='images/i6.jpg') }}" alt="Japan earthquake and tsunami">
+                        <img src="{{ url_for('static',filename='images/i6.png') }}" alt="My Donut">
                     </div>
                     </a>
                 </div>
@@ -259,7 +259,7 @@
                         <h1 class="shelltext">>>>print(childhood.py)</h1>
                     </div>
                     <div id="sh4" class="shellline">
-                        <h1 class="shellquote">"I started off young interested in HTML and .bat files as a child. It fascinated me that such simple lines could produce things on a computer."</h1>
+                        <h1 class="shellquote">"I started off young, interested in HTML and .bat files as a child. It fascinated me that such simple lines could produce things on a computer."</h1>
                     </div>
                     <div id="sh5" class="shellline">
                         <h1 class="shelltext">>>>print(progress.py)</h1>
@@ -297,7 +297,11 @@
                 </h1>
             </div>
             <div id="trvcontainer">
-
+                <h1>My Grandpa documented all of his trips abroad. Visiting his house was almost certain to end up with these VHS tapes being brought out. Since I was young I was able to see the pyramids of Egypt and the rainforests of Borneo.
+                    <br>I was privilieged enough to get to travel abroad growing up myself. From the snowswept lands of Finland to an ancient Mayan city within the Mexican jungle. 
+                    <br>There have also been chances at University for travel such as the 4th year trip to Tenerife where I was able to observe Spain's highest point, Mt Teide. 
+                    <br><br>Travelling allows for a chance to see other cultures, use languages learnt at home and to capture those moments with a camera. Seeing these different landscapes led to my love for photography which I hold to this day.
+                </h1>
             </div>
         </div>
 </div>
