--- a/templates/about.html
+++ b/templates/about.html
@@ -303,6 +303,109 @@
                     <br><br>Travelling allows for a chance to see other cultures, use languages learnt at home and to capture those moments with a camera. Seeing these different landscapes led to my love for photography which I hold to this day.
                 </h1>
             </div>
+
+            <div id="desertscene">
+                <div id="pyramid">
+                    <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 200 200" style="enable-background:new 0 0 200 200;" xml:space="preserve">
+            <style type="text/css">
+                .st7{fill:#AF8A35;}
+                .st8{fill:#FCC34A;}
+            </style>
+            <g>
+                <polygon class="st7" points="100.6,36.1 133.5,162.1 194.4,162.1 	"/>
+                <polygon class="st8" points="100.8,36.1 5.6,163.9 133.6,162.1 	"/>
+            </g>
+            </svg>
+            
+                </div>
+                <div id="cloud1">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 400 100" style="enable-background:new 0 0 400 100;" xml:space="preserve">
+                 
+                 <defs>
+                 <filter id="squiggly-0">
+                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0"/>
+                    <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="2" />
+                  </filter>
+                  <filter id="squiggly-1">
+                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1"/>
+              <feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />
+                  </filter>
+                  
+                  <filter id="squiggly-2">
+                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2"/>
+              <feDisplacementMap in="SourceGraphic" in2="noise" scale="2" />
+                  </filter>
+                  <filter id="squiggly-3">
+                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3"/>
+              <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
+                  </filter>
+                  
+                  <filter id="squiggly-4">
+                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4"/>
+              <feDisplacementMap in="SourceGraphic" in2="noise" scale="1" />
+                  </filter>
+                </defs>
+                 
+                  <style type="text/css">
+                .st0{fill:#ffffffa6;}
+            </style>
+            <g>
+                <path class="st0" d="M131.2,86.6h202.1c13.5,0,24.4-10.9,24.4-24.4v0c0-13.5-10.9-24.4-24.4-24.4H131.2
+                    c-13.5,0-24.4,10.9-24.4,24.4v0C106.8,75.7,117.7,86.6,131.2,86.6z"/>
+                <path class="st0" d="M66.8,62.2h202.1c13.5,0,24.4-10.9,24.4-24.4v0c0-13.5-10.9-24.4-24.4-24.4H66.8c-13.5,0-24.4,10.9-24.4,24.4
+                    v0C42.4,51.3,53.4,62.2,66.8,62.2z"/>
+            </g>
+            </svg>
+            
+                </div>
+                <div id="cloud2">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 400 100" style="enable-background:new 0 0 400 100;" xml:space="preserve">
+            <style type="text/css">
+                .st0{fill:#ffffffa6;}
+            </style>
+            <g>
+                <path class="st0" d="M268.9,86.6H66.8c-13.5,0-24.4-10.9-24.4-24.4v0c0-13.5,10.9-24.4,24.4-24.4h202.1c13.5,0,24.4,10.9,24.4,24.4
+                    v0C293.3,75.7,282.4,86.6,268.9,86.6z"/>
+                <path class="st0" d="M333.3,62.2H131.2c-13.5,0-24.4-10.9-24.4-24.4v0c0-13.5,10.9-24.4,24.4-24.4h202.1
+                    c13.5,0,24.4,10.9,24.4,24.4v0C357.7,51.3,346.7,62.2,333.3,62.2z"/>
+            </g>
+            </svg>
+            
+                </div>
+                <div id="desert">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 1776 427" style="enable-background:new 0 0 1776 427;" xml:space="preserve">
+            <style type="text/css">
+                .st1{fill:#F6CC9D;}
+                .st2{fill:#F18966;}
+                .st3{fill:#F9B674;}
+            </style>
+            <g id="Layer_3">
+                <path class="st1" d="M0,355.4c0-3.5,95.2-63.5,101.4-68.5c0,0,90.1-101.9,372.8-115c104.2-4.8,451.3,146.1,547,113.8
+                    c9.1-3.1,45.8-15.9,97.5-31.4c40.9-12.2,50.5-14,97.5-27.9c50-14.8,75-22.2,101-31.4c82.6-29.2,100.3-46,125.4-34.8
+                    c23.7,10.5,24.2,24.4,70.3,47.2c20.4,10.1,58.7,4,89.9,6c53.4,3.3,74,11.4,117.5,12.6c20.3,0.6,17.3,2.6,55.5,7.4V427H0V355.4z"/>
+            </g>
+            <g id="Layer_2">
+                <path class="st2" d="M1776,271.8c-9.6,4.7-23.5,11.1-40.7,17.4c-67.8,25-125.2,27-160.3,27.9c-50.3,1.3-91.6-4.6-132.4-10.5
+                    c-45.3-6.5-79.1-14.2-108-20.9c-73.6-17-77-23-153.3-41.8c-100.4-24.8-137-25.1-156.8-24.4c-36,1.2-64.4,7.1-80.1,10.5
+                    c-46.4,9.9-76.6-28-136.1-6.7c-61.9,22.2-92.9,33.3-121.7,38c-33.4,5.4-75,1.4-156.8-7c-68.4-7-111.5-11.5-170.7-24.4
+                    c-47.6-10.4-71.5-15.5-104.5-27.9c-89.1-33.2-106.4-21.9-202.1-52.3c-22.3-7.1-40.9-11.4-52.6-13.9V427h1776V271.8z"/>
+            </g>
+            <g id="Layer_1">
+                <path class="st3" d="M0,314.9c37.8-0.1,96.2-3.4,164.1-22.1c45.6-12.5,60.8-22.4,104.5-34.7c9.8-2.7,90.4-24.8,184.6-22.1
+                    c116.1,3.3,117.7,40.2,247.4,50.5c84.4,6.7,158.7-3.1,181.2-6.3c72.5-10.4,89-22.8,160.3-28.4c59.4-4.6,105.1-0.5,146.3,3.2
+                    c72.9,6.5,126.5,18.4,170.7,28.4c94.7,21.3,163.7,45.4,223,66.2c51.2,18,117.7,43.3,194,77.4H0V314.9z"/>
+            </g>
+            </svg>
+            
+                </div>
+                    
+            </div>
+
+
         </div>
 </div>
 </div>
