--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,32 @@
     
 <a href="#top" class="arrow" aria-label="Back to top" title="Back to top">↑</a>
 <a href="#section2" class="arrow2" aria-label="Down" title="Go down">↓</a>
+
+
+<!-- Alert button -->
+<a href="#" class="alert">
+    <div id="alertbox">
+        <div id="alertimg">
+            <img src="{{ url_for('static',filename='images/alert.png') }}" alt="Alert">
+        </div>
+        <div id="alertmsg">
+            <h1>Mobile version under construction</h1>
+        </div>
+    </div>
+</a>
+<!-- Linked In Button -->
+<a href="https://www.linkedin.com/in/harry-bonshor-mayes-5a2236199/" target="_blank" class="linkedin" aria-label="My LinkedIn" title="LinkedIn">
+    <div id="linkcontainer">
+        <div id="linkedbox">
+            <img src="{{ url_for('static',filename='images/linked.png') }}" alt="My LinkedIn">
+        </div>
+        <div id="linktext">
+            <h1>Check out my LinkedIn!</h1>
+        </div>
+    </div>
+</a>
+
+<!-- The body -->
 <div class="container">
     <div class="box1" id="section1">
         <div class="starter">
