--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,4 +1,17 @@
 {% include 'base.html' %}
 <body>
+   
+   <!-- Linked in -->
+    <a href="https://www.linkedin.com/in/harry-bonshor-mayes-5a2236199/" target="_blank" class="linkedin" aria-label="My LinkedIn" title="LinkedIn">
+        <div id="linkcontainer">
+            <div id="linkedbox">
+                <img src="{{ url_for('static',filename='images/linked.png') }}" alt="My LinkedIn">
+            </div>
+            <div id="linktext">
+                <h1>Check out my LinkedIn!</h1>
+            </div>
+        </div>
+    </a>
+
     <div id="testing"></div>
 </body>
