--- a/templates/about.html
+++ b/templates/about.html
@@ -331,58 +331,130 @@
                 </div>
                 <div id="cloud1">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 viewBox="0 0 400 100" style="enable-background:new 0 0 400 100;" xml:space="preserve">
-                 
-                 <defs>
-                 <filter id="squiggly-0">
-                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0"/>
-                    <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="2" />
-                  </filter>
-                  <filter id="squiggly-1">
-                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1"/>
-              <feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />
-                  </filter>
-                  
-                  <filter id="squiggly-2">
-                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2"/>
-              <feDisplacementMap in="SourceGraphic" in2="noise" scale="2" />
-                  </filter>
-                  <filter id="squiggly-3">
-                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3"/>
-              <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
-                  </filter>
-                  
-                  <filter id="squiggly-4">
-                    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4"/>
-              <feDisplacementMap in="SourceGraphic" in2="noise" scale="1" />
-                  </filter>
-                </defs>
-                 
-                  <style type="text/css">
-                .st0{fill:#ffffffa6;}
-            </style>
-            <g>
-                <path class="st0" d="M131.2,86.6h202.1c13.5,0,24.4-10.9,24.4-24.4v0c0-13.5-10.9-24.4-24.4-24.4H131.2
-                    c-13.5,0-24.4,10.9-24.4,24.4v0C106.8,75.7,117.7,86.6,131.2,86.6z"/>
-                <path class="st0" d="M66.8,62.2h202.1c13.5,0,24.4-10.9,24.4-24.4v0c0-13.5-10.9-24.4-24.4-24.4H66.8c-13.5,0-24.4,10.9-24.4,24.4
-                    v0C42.4,51.3,53.4,62.2,66.8,62.2z"/>
-            </g>
-            </svg>
+                    viewBox="0 0 224.1 103.4" style="enable-background:new 0 0 224.1 103.4;" xml:space="preserve">
+               <style type="text/css">
+                    .st43{fill:#EFEEEEc3;}
+                    .st44{fill:#FFFFFFc3;}
+                    .st45{fill:#bbbabac3;}
+               </style>
+               <g>
+                   <path class="st43" d="M195.3,45.9c0-8.8-11.9-16-27-16.6c-5.2-4.2-13.8-7-23.5-7c-3.9-1.6-8.5-2.7-13.5-3.1
+                       c-4.7-1.9-10.6-3.1-16.8-3.1c-13.1,0-24.2,5-27.8,11.8c-6.5,1-12,3.3-15.9,6.3c-1.8-0.2-3.6-0.3-5.5-0.3c-15.4,0-28,6.9-29,15.6
+                       c-4.6,2.9-7.4,6.8-7.4,11.1c0,9.2,13,16.6,29,16.6c1.2,0,2.4,0,3.5-0.1c2.5,0.7,5.3,1.1,8.1,1.3c5.1,2.6,11.9,4.2,19.3,4.2
+                       c3.3,0,6.6-0.3,9.6-0.9c5.3,3.2,12.8,5.2,21,5.2c8.4,0,15.9-2,21.2-5.3c0.3,0.1,0.6,0.1,0.9,0.2c6.1,2.1,14.3,2.3,22.7-0.1
+                       c15.3-4.3,25.6-15.2,23.3-24.5C192.4,54.2,195.3,50.3,195.3,45.9z"/>
+                   <g>
+                       <path class="st44" d="M164.2,78.1c-8.4,2.4-16.6,2.2-22.7,0.1c-0.3-0.1-0.6-0.1-0.9-0.2c-5.3,3.3-12.8,5.3-21.2,5.3
+                           c-5.9,0-11.4-1-16-2.8c8.8-2.9,14.8-8.3,14.8-14.5c0-0.7-0.1-1.4-0.2-2c-1.7,8.2-14,14.6-28.8,14.6c-2.8,0-5.5,0-8.1-0.2
+                           c-3.7-0.6-7-1.6-10-2.9c7.1-2.1,12.5-5.8,14.7-10.3C80.6,70,71.5,73.2,61,73.2c-16,0-29-7.5-29-16.6c0-1.6,0.4-3.1,1.1-4.5
+                           c-2.7,2.5-4.3,5.5-4.3,8.7c0,0,0,0.1,0,0.1c0,0,0,0.1,0,0.1c0,9.2,13,16.6,29,16.6c1.2,0,2.4,0,3.5-0.1c2.5,0.7,5.3,1.1,8.1,1.3
+                           c5.1,2.6,11.9,4.2,19.3,4.2c3.3,0,6.6-0.3,9.6-0.9c5.3,3.2,12.8,5.2,21,5.2c8.4,0,15.9-2,21.2-5.3c0.3,0.1,0.6,0.1,0.9,0.2
+                           c6.1,2.1,14.3,2.3,22.7-0.1c14.9-4.2,25.1-14.7,23.4-23.8C186.3,66.3,177,74.5,164.2,78.1z"/>
+                       <path class="st44" d="M195,44.3c-0.7,3.6-3.5,6.8-7.5,9.3c0.3,1.3,0.4,2.5,0.3,3.8c4.6-2.9,7.5-6.8,7.5-11.1
+                           C195.2,45.6,195.1,44.9,195,44.3z"/>
+                   </g>
+                   <path class="st45" d="M168.6,29.3c-5.2-4.3-14-7.2-23.9-7.2c-0.1,0-0.2,0-0.3,0c-3.8-1.6-8.3-2.6-13.1-2.9c-4.3-1.8-9.5-2.9-15.1-3
+                       c-0.5,0-1,0-1.4,0c-0.1,0-0.2,0-0.3,0c0,0,0,0-0.1,0c0,0-0.1,0-0.1,0c-10.8,0-20.2,3.4-25.2,8.3l0.1,0.1c-1.1,1.1-1.9,2.2-2.5,3.4
+                       c-6.5,1-12,3.3-15.9,6.3c-1.8-0.2-3.6-0.3-5.5-0.3c-11.8,0-21.9,4-26.5,9.8c-1.9,2-3.2,4.2-3.6,6.5c-4,2.8-6.3,6.4-6.3,10.4
+                       c0,0.4,0,0.8,0.1,1.2c0.9-3.2,3.4-6,7-8.3c0.7-6.7,8.3-12.2,18.7-14.5c3-0.6,6.2-0.9,9.5-0.9c15.2,0,27.7,6.7,28.9,15.2
+                       c0.1-0.5,0.1-0.9,0.1-1.4c0-7.3-8.2-13.5-19.6-15.7c3.5-2,7.9-3.5,12.7-4.2c3.6-6.8,14.7-11.8,27.8-11.8c6.3,0,12.1,1.1,16.8,3.1
+                       c1,0.1,2,0.2,3,0.3c5.1,2.7,8.6,6.5,9.2,10.7c0.1-0.5,0.1-1,0.1-1.5c0-2.9-1.3-5.7-3.7-8.1c1.7,0.5,3.3,1,4.9,1.7
+                       c9.7,0,18.3,2.8,23.5,7c0.2,0,0.4,0,0.6,0c1.9,2.2,3,4.8,3,7.4c0,2.7-1.2,5.3-3.2,7.6c3.3-2.7,5.3-6,5.3-9.6c0-1.8-0.5-3.5-1.4-5.1
+                       c12.3,1.6,21.7,7.6,22.6,15c0.3-0.9,0.4-1.8,0.4-2.8C195.3,37.2,183.5,30,168.6,29.3z"/>
+               </g>
+               </svg>
             
                 </div>
                 <div id="cloud2">
+                    
+            
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 viewBox="0 0 400 100" style="enable-background:new 0 0 400 100;" xml:space="preserve">
+                 viewBox="0 0 224.1 103.4" style="enable-background:new 0 0 224.1 103.4;" xml:space="preserve">
+                 <defs>
+                    <filter id="squiggly-0">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0"/>
+                        <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="2" />
+                    </filter>
+                    <filter id="squiggly-1">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />
+                    </filter>
+                    
+                    <filter id="squiggly-2">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="2" />
+                    </filter>
+                    <filter id="squiggly-3">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
+                    </filter>
+                    
+                    <filter id="squiggly-4">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="1" />
+                    </filter>
+                    <filter id="squiggly-5">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0"/>
+                        <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="2" />
+                    </filter>
+                    <filter id="squiggly-6">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />
+                    </filter>
+                    
+                    <filter id="squiggly-7">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="1" />
+                    </filter>
+                    <filter id="squiggly-8">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
+                    </filter>
+                    
+                    <filter id="squiggly-9">
+                        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4"/>
+                <feDisplacementMap in="SourceGraphic" in2="noise" scale="1" />
+                    </filter>
+                    </defs>
             <style type="text/css">
-                .st0{fill:#ffffffa6;}
+                .st43{fill:#EFEEEEc3;}
+                .st44{fill:#FFFFFFc3;}
+                .st45{fill:#bbbabac3;}
             </style>
             <g>
-                <path class="st0" d="M268.9,86.6H66.8c-13.5,0-24.4-10.9-24.4-24.4v0c0-13.5,10.9-24.4,24.4-24.4h202.1c13.5,0,24.4,10.9,24.4,24.4
-                    v0C293.3,75.7,282.4,86.6,268.9,86.6z"/>
-                <path class="st0" d="M333.3,62.2H131.2c-13.5,0-24.4-10.9-24.4-24.4v0c0-13.5,10.9-24.4,24.4-24.4h202.1
-                    c13.5,0,24.4,10.9,24.4,24.4v0C357.7,51.3,346.7,62.2,333.3,62.2z"/>
+                <path class="st43" d="M199,43.1c-0.9-8.7-13.5-15.6-29-15.6c-1.9,0-3.7,0.1-5.5,0.3c-0.6-0.4-1.2-0.9-1.8-1.3
+                    c-3.1-6.2-10.1-9.7-18.3-9.9c-5.3-4.2-13.9-6.9-23.6-6.9c-6.3,0-12.1,1.1-16.8,3.1c-5,0.4-9.7,1.5-13.5,3.1c-9.7,0-18.3,2.8-23.5,7
+                    c-14.2,0.6-25.7,7-26.9,15.1c-12.9,1.7-22.4,8.3-22.4,16.2c0,9.2,13,16.6,29,16.6c1.8,0,3.6-0.1,5.3-0.3c4.2,4.8,10.9,9,19,11.2
+                    c3.6,1,7.2,1.6,10.6,1.7c4.7,5.6,14.6,9.4,26.2,9.4c8.6,0,16.3-2.1,21.6-5.5c1,0.1,2.1,0.1,3.2,0.1c8.8,0,16.7-2.3,22.1-5.8
+                    c9-1.7,16.1-5.8,18.9-11c1.3,0.1,2.6,0.2,4,0.2c16,0,29-7.5,29-16.6C206.5,49.9,203.6,46,199,43.1z"/>
+                <path class="st44" d="M68.3,24.9c5.3-4.1,13.7-6.7,23.3-6.7c11,0,20.6,3.5,25.5,8.7c-4.1-6.3-14.7-10.8-27.2-10.8
+                    c-9.8,0-18.5,2.8-23.7,7"/>
+                <path class="st44" d="M40.8,42.4c0-9.2,13-16.6,29-16.6c12.9,0,23.8,4.8,27.6,11.5c-2-8.1-14.1-14.3-28.7-14.3c-16,0-29,7.5-29,16.6
+                    c0,1.8,0.5,3.5,1.4,5.1C40.9,44,40.8,43.2,40.8,42.4z"/>
+                <g>
+                    <path class="st44" d="M200.1,45.7c2.9,1.8,5,4,6.3,6.5c-0.6-3.5-3.2-6.8-7-9.3C199.7,43.8,200,44.7,200.1,45.7z"/>
+                    <path class="st44" d="M18.7,56.8c0-7.9,9.6-14.5,22.4-16.2c1.3-8.1,12.7-14.5,26.9-15.1c5.2-4.2,13.8-7,23.5-7
+                        c3.9-1.6,8.5-2.7,13.5-3.1c4.7-1.9,10.6-3.1,16.8-3.1c9.7,0,18.3,2.7,23.6,6.9c8.2,0.2,15.1,3.7,18.3,9.9c0.6,0.4,1.2,0.8,1.8,1.3
+                        c1.8-0.2,3.6-0.3,5.5-0.3c13.2,0,24.4,5.1,27.9,12c-1.4-8.4-13.8-15-28.9-15c-1.9,0-3.7,0.1-5.5,0.3c-0.6-0.4-1.2-0.9-1.8-1.3
+                        c-3.1-6.2-10.1-9.7-18.3-9.9c-5.3-4.2-13.9-6.9-23.6-6.9c-6.3,0-12.1,1.1-16.8,3.1c-5,0.4-9.7,1.5-13.5,3.1
+                        c-9.7,0-18.3,2.8-23.5,7c-14.2,0.6-25.7,7-26.9,15.1c-12.9,1.7-22.4,8.3-22.4,16.2c0,1.6,0.4,3.1,1.1,4.6
+                        C18.8,57.9,18.7,57.3,18.7,56.8z"/>
+                </g>
+                <path class="st44" d="M175.7,31c12.7,0,23.1,6.7,24.2,15.2c0.1-0.5,0.1-1,0.1-1.5c0-9.2-10.9-16.6-24.3-16.6
+                    c-13.4,0-24.3,7.5-24.3,16.6c0,0.5,0,1,0.1,1.5C152.7,37.7,163.1,31,175.7,31z"/>
+                <path class="st45" d="M134.2,77.1c-2,6.4-13.4,11.4-27.3,11.4c-13.6,0-24.8-4.7-27.1-11c-0.2,0.6-0.3,1.3-0.3,2
+                    c0,7.4,12.3,13.4,27.6,13.4s27.6-6,27.6-13.4C134.7,78.7,134.5,77.9,134.2,77.1z"/>
+                <path class="st45" d="M127.6,88.1c1.2,0.1,2.4,0.1,3.7,0.1c16,0,29-7.5,29-16.6c0-0.9-0.1-1.8-0.4-2.6c-2.2,8-14.2,14-28.7,14
+                    c-0.3,0-0.7,0-1,0"/>
+                <path class="st45" d="M177.4,68c-1.3,0-2.7-0.1-4-0.2c-2.8,5.2-9.9,9.3-18.9,11c-5.3,3.6-13.2,5.8-22.1,5.8c-1.1,0-2.1,0-3.2-0.1
+                    c-5.3,3.4-13,5.5-21.6,5.5c-11.5,0-21.5-3.8-26.2-9.4c-3.4-0.1-7-0.7-10.6-1.7c-8.1-2.3-14.8-6.4-19-11.2c-1.7,0.2-3.5,0.3-5.3,0.3
+                    c-14.8,0-27.1-6.4-28.8-14.6c-0.1,0.6-0.2,1.3-0.2,2c0,9.2,13,16.6,29,16.6c1.8,0,3.6-0.1,5.3-0.3c4.2,4.8,10.9,9,19,11.2
+                    c3.6,1,7.2,1.6,10.6,1.7c4.7,5.6,14.6,9.4,26.2,9.4c8.6,0,16.3-2.1,21.6-5.5c1,0.1,2.1,0.1,3.2,0.1c8.8,0,16.7-2.3,22.1-5.8
+                    c9-1.7,16.1-5.8,18.9-11c1.3,0.1,2.6,0.2,4,0.2c16,0,29-7.5,29-16.6c0-0.7-0.1-1.3-0.2-2C204.5,61.6,192.3,68,177.4,68z"/>
             </g>
             </svg>
+            
+            
             
                 </div>
                 <div id="desert">
@@ -415,6 +487,8 @@
                     
             </div>
 
+
+            <!-- desert end -->
 
         </div>
 </div>
