--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -1193,70 +1193,99 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
     margin: 1rem;
     color: rgba(15, 15, 15, 0.774); 
 }
-#desertscene {
-    height: 26.8rem;
-    width: 111rem;
-    background-color: rgb(37, 135, 247);
-    overflow: hidden;
-    animation: squigglevision 1s infinite;
+
+
+  #desertscene {
+  top: 5rem;
+  position: relative;
+  height: 26.8rem;
+  width: 111rem;
+  background-color: rgb(37, 135, 247);
+  overflow: hidden;
+  margin: auto;
+  animation: squigglevision 1s infinite;
+  
+  }
+  #pyramid{
+    width: 290px;
+    height: 250px;
+    position:relative;
+    left: 63rem;
+    top: 5rem;
+    animation: squigglevision2 0.8s infinite;
+  }
+  #cloud1{
     position: relative;
-    top: 2rem;
-    }
-#pyramid{
-      width: 290px;
-      height: 250px;
-      position:relative;
-      left: 63rem;
-      top: 10rem;
-    }
-#cloud1{
-      position: relative;
-      width: 500px;
-      height: 100px;
-      bottom: 15rem;
-      right: 28rem;
-      animation: moveright 20s linear infinite, squigglevision 0.5s infinite;
-      
-    }
-@keyframes moveright{
-      100%{
-        transform: translateX(150rem);
-      }
-    }
-#cloud2{
-      position: relative;
-      width: 500px;
-      height: 100px;
-      bottom: 15rem;
-      right: 28rem;
-      animation: moveright 20s linear infinite, squigglevision 0.5s infinite;
-      animation-delay: 10s;
-    }
-#desert{
-      position: relative;
-      bottom: 22rem;
-      animation: squigglevision 0.5s infinite;
-    }
+    width: 250px;
+    height: 70px;
+    bottom: 15rem;
+    right: 28rem;
+    animation: moveright 23s linear infinite, squigglevision2 0.5s infinite;
     
-@keyframes squigglevision {
-      0% {
-        -webkit-filter: url('#squiggly-0');
-        filter: url('#squiggly-0');
-      }
-      25% {
-        -webkit-filter: url('#squiggly-1');
-        filter: url('#squiggly-1');
-      }
-      50% {
-        -webkit-filter: url('#squiggly-2');
-        filter: url('#squiggly-2');
-      }
-      75% {
-        -webkit-filter: url('#squiggly-3');
-        filter: url('#squiggly-3');
-      }
-      100% {
-        -webkit-filter: url('#squiggly-4');
-        filter: url('#squiggly-4');
-      }
+  }
+  @keyframes moveright{
+    100%{
+      transform: translateX(150rem);
     }
+  }
+  #cloud2{
+    position: relative;
+    width: 250px;
+    height: 70px;
+    bottom: 15rem;
+    right: 28rem;
+    animation: moveright 23s linear infinite, squigglevision 0.5s infinite;
+    animation-delay: 10s;
+  }
+  
+  #desert{
+    position: relative;
+    bottom: 22rem;
+    animation: squigglevision2 0.5s infinite;
+  }
+  
+  @keyframes squigglevision {
+    0% {
+      -webkit-filter: url('#squiggly-0');
+      filter: url('#squiggly-0');
+    }
+    25% {
+      -webkit-filter: url('#squiggly-1');
+      filter: url('#squiggly-1');
+    }
+    50% {
+      -webkit-filter: url('#squiggly-2');
+      filter: url('#squiggly-2');
+    }
+    75% {
+      -webkit-filter: url('#squiggly-3');
+      filter: url('#squiggly-3');
+    }
+    100% {
+      -webkit-filter: url('#squiggly-4');
+      filter: url('#squiggly-4');
+    }
+  }
+  
+  @keyframes squigglevision2 {
+    0% {
+      -webkit-filter: url('#squiggly-5');
+      filter: url('#squiggly-5');
+    }
+    25% {
+      -webkit-filter: url('#squiggly-6');
+      filter: url('#squiggly-6');
+    }
+    50% {
+      -webkit-filter: url('#squiggly-7');
+      filter: url('#squiggly-7');
+    }
+    75% {
+      -webkit-filter: url('#squiggly-8');
+      filter: url('#squiggly-8');
+    }
+    100% {
+      -webkit-filter: url('#squiggly-9');
+      filter: url('#squiggly-9');
+    }
+  }
