--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </div>
 </a>
 <!-- Linked In Button -->
-<a href="https://www.linkedin.com/in/harry-bonshor-mayes-5a2236199/" target="_blank" class="linkedin" aria-label="My LinkedIn" title="LinkedIn">
+<a href="https://www.linkedin.com/in/harry-bonshor-mayes-5a2236199/" target="_blank" class="linkedin" id="linkedinbutton" aria-label="My LinkedIn" title="LinkedIn">
     <div id="linkcontainer">
         <div id="linkedbox">
             <img src="{{ url_for('static',filename='images/linked.png') }}" alt="My LinkedIn">
@@ -27,6 +27,20 @@
         </div>
     </div>
 </a>
+
+<!-- modal section -->
+<!-- Li popup -->
+<div class="bg-modal">
+	<div class="modal-contents">
+		<img src="{{ url_for('static',filename='images/modalimg.jpg') }}" alt="Have a Donut">
+		<h1>Thanks for checking out my LinkedIn, it means a lot.
+			<br><br> Have a donut.
+		</h1>
+		<div class="closemodal" id="modalcloser">+</div>
+	</div>
+
+</div>
+<!-- modal end -->
 
 <!-- The body -->
 <div class="container">
@@ -89,6 +103,22 @@
         </div>
     </div>
 </div>
+
+
+<!-- li popup -->
+<script>
+	document.getElementById('linkedinbutton').addEventListener('click', function(){
+		document.querySelector('.bg-modal').style.display = 'flex';
+	})
+</script>
+<script>
+	document.getElementById('modalcloser').addEventListener('click', function(){
+		document.querySelector('.bg-modal').style.display = 'none';
+	})
+</script>
+<!-- li popup end -->
+
+
 <!-- JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ url_for('static',filename='lightbox/dist/js/lightbox.js') }}"></script>
