got rid of projects

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -13,6 +13,19 @@
     </div>
 </a>
 
+        <!-- Delete when complete -->
+        <div id="deleteme">
+            <div id="deletecontent">
+                <h1>Hi, I'm currently working on this page.
+                    <br>I'll be adding content such as my masters project and mapping project soon.
+                    <br>Please check back later.
+                </h1>
+            </div>
+
+        </div>
+        <!-- delete end -->
+
+
         <!-- modal section -->
         <!-- Li popup -->
         <div class="bg-modal">
