--- a/static/styles/projects.css
+++ b/static/styles/projects.css
@@ -172,6 +172,61 @@ body{
     height: 100%;
 }
 
+/* delete soon */
+body{
+    overflow: hidden;
+}
+
+#deleteme{
+    width:100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.384);
+    position: absolute;
+    top: 9.4rem;;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+#deletecontent{
+    border-radius: 20px;
+    width: 60rem;
+    height: 40rem;
+    opacity: 0;
+    top: 40rem;
+    background-color: rgb(114, 24, 24);
+    animation: fadeInAnimation ease-in-out 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-delay: 2s;
+}
+
+#deletecontent h1{
+    position: relative;
+    font-size: 3.5rem;
+    color: white;
+    top:3rem;
+    text-align: center;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-weight: 600;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(-10rem);
+     }
+}
+
+/* delete */
+
+
 /* popup */
 .bg-modal{
     width:100%;
